--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "doctrine/mongodb",
+    "name": "fcpauldiaz/mongodb",
     "type": "library",
     "description": "Doctrine MongoDB Abstraction Layer",
     "keywords": ["database", "persistence", "mongodb"],
